# TendermintConsensus_Unibo

./: CMakeLists.txt  README.md  Tendermint.pptx  github_link.txt  main.cpp
src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Config.cpp  Config.h  Consensus.cpp  Consensus.h  Message.cpp  Message.h  Network.cpp  Network.h  Node.cpp  Node.h  StateMachine.cpp  StateMachine.h  Transaction.cpp  Transaction.h  Utils.cpp  Utils.h
tendermint/src/: main.py
tendermint/src/consensus/: block.py  messages.py  state_machine.py  vote.py
tendermint/src/network/: p2p.py
tendermint/src/state/: abci_app.py
tendermint/src/util/: logger.py  timers.py
tendermint/tests/: test_integration.py  test_network.py
tendermint_python/: Blockchain_Presentation.pptx
tendermint_python/src/: config.py  main.py
tendermint_python/src/consensus/: block.py  state_machine.py  validator.py  vote.py
tendermint_python/src/network/: p2p.py
tendermint_python/src/state/: app.py  mempool.py  store.py
tendermint_python/src/util/: logger.py  timers.py
tendermint_python/tests/: conftest.py  test_consensus.py
tests/: TestConsensus.cpp  TestNetwork.cpp  TestNode.cpp
